# simpl-ssh-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/scripts/: prepare-release.mjs
.github/workflows/: ci.yml  release.yml
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/zh/content/: 快速开始.md  项目概述.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/: DESIGN.md
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  simpl-ssh.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/session/: auth.rs  forward.rs  git_ops.rs  groups.rs  known_hosts.rs  local_pty.rs  manager.rs  mod.rs  monitor.rs  profile.rs  project.rs  pty.rs  secrets.rs  sftp.rs  socks.rs  ssh.rs  sync.rs  transfer.rs  workspace.rs  x11.rs
src/components/: CommandPalette.tsx  ConnSteps.tsx  ConnectDialog.tsx  EditorPane.tsx  ForwardPanel.tsx  GitDiffView.tsx  GitPanel.tsx  HostKeyDialog.tsx  LocalTerminalPane.tsx  MonitorPane.tsx  ProjectSidebar.tsx  SettingsDialog.tsx  SftpPane.tsx  Sidebar.tsx  SplitView.tsx  StatusBar.tsx  SyncDialog.tsx  TabBar.tsx  TerminalPane.tsx  TerminalSearchBar.tsx  ThemePicker.tsx  TopBar.tsx  TransferPanel.tsx
src/hooks/: useAppShortcuts.ts  useUpdater.ts  useWorkspaceRestore.ts
src/settings/: SettingsProvider.tsx  types.ts
src/theme/: ThemeProvider.tsx
src/themes/: build.ts  index.ts  types.ts
src/utils/: editorLanguages.ts  fuzzyMatch.ts  logHighlight.ts
(+111 files in other folders)
