[package]
name = "simpl-ssh"
version = "0.1.0"
description = "A lightweight Xshell + Xftp combined SSH client built with Rust + Tauri"
authors = ["yuanqinglong5413"]
license = "MIT"
repository = "https://github.com/yuanqinglong5413/simpl-ssh-client"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.61.2"
russh-sftp = "2.3.0"
async-trait = "0.1.89"
anyhow = "1.0.102"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v4"] }
dirs = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
chrono = "0.4.45"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

